--- a/index.html
+++ b/index.html
@@ -1,13 +1,41 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./assets/images/favicon-32x32.png">
   <title>Frontend Mentor | Social links profile</title>
+  <!-- Font -->
+  <!-- <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap" rel="stylesheet"> -->
+  <!-- Custom css -->
+  <link rel="stylesheet" href="css/main.css">
 </head>
+
 <body>
-
-
+  <main>
+    <section class="presentation">
+      <figure class="presentation__figure">
+        <img src="./assets/images/avatar-jessica.jpeg" class="figure__img" alt="face-img">
+      </figure>
+      <div class="presentation__subtitle">
+        <h1 id="subtitle__name">Jessica Randall</h1>
+        <span class="subtitle__ubication"><strong>London, United Kingdom</strong></span>
+      </div>
+      <p class="presentation__paragraph">"Front-end developer and avid reader."</p>
+    </section>
+    <div class="social-links">
+      <ul class="menu-links">
+        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">Frontend Mentor</a></li>
+        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
+        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">GitHub</a></li>
+        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">Twitter</a></li>
+        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+      </ul>
+    </div>
+  </main>
 </body>
 </html>
