--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
   <link rel="stylesheet" href="css/main.css">
 </head>
 
-<body>
-  <main>
+<body class="body">
+  <main class="main">
     <section class="presentation">
       <figure class="presentation__figure">
         <img src="./assets/images/avatar-jessica.jpeg" class="figure__img" alt="face-img">
@@ -26,11 +26,11 @@
     </section>
     <div class="social-links">
       <ul class="menu-links">
-        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">Frontend Mentor</a></li>
-        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">LinkedIn</a></li>
-        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">GitHub</a></li>
-        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">Twitter</a></li>
-        <li class="link__social"><a class="link" href="#" target="_blank" rel="noopener noreferrer">Instagram</a></li>
+        <li class="link__social"><a class="link" href="#" rel="noopener noreferrer">Frontend Mentor</a></li>
+        <li class="link__social"><a class="link" href="#" rel="noopener noreferrer">GitHub</a></li>
+        <li class="link__social"><a class="link" href="#" rel="noopener noreferrer">LinkedIn</a></li>
+        <li class="link__social"><a class="link" href="#" rel="noopener noreferrer">Twitter</a></li>
+        <li class="link__social"><a class="link" href="#" rel="noopener noreferrer">Instagram</a></li>
       </ul>
     </div>
   </main>
